Desktop version completed

--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body{
 
 /* Header section */
 header{
-padding-top: 32px;
-padding-bottom: 28px;
+    padding-top: 32px;
+    padding-bottom: 28px;
 }
 
 .brand-logo{
@@ -80,7 +80,7 @@ padding-bottom: 28px;
 }
   
 .line {
-    border-top: 0.5px solid black; /* Add a 1px solid black border to the top of the div */
+    border-top: 0.5px solid gray; /* Add a 1px solid black border to the top of the div */
     flex-grow: 1; /* Make the div stretch to fill the available space */
     width: 30%; /* Limit the width of the div to 40% of the container width */
 }
@@ -218,9 +218,9 @@ input[type="checkbox"]{
     margin-bottom: 20px;
 }
 
+
 @media(max-width: 768px) {
     #container{
-      margin: 0 159px;
       width: 450px;
     }
 
@@ -277,3 +277,55 @@ input[type="checkbox"]{
         margin-right: 0;
     }
 }
+
+@media (min-width: 1024px){
+    #container{
+        width: 450px;
+    }
+
+    .header-text{
+        text-align: center;
+        margin:40px 0 0;
+    }
+    .header-text h2{
+        text-align: center;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 40px;
+        letter-spacing: -0.04em;
+        margin-bottom: 0;
+        width: 80%;
+        margin-left: 45px;
+    }
+
+    form{
+        width: 450px;
+    }
+
+    .facebook-btn button, 
+    .google-btn button{
+        width: 400px;
+    }
+
+    .day, .year{
+        display: grid;
+        text-align: center;
+        padding-top: 5px;
+        margin: 10px;
+    }
+    .select-month{
+        display: grid;
+        text-align: center;
+        padding-top: 5px;
+        margin-top: 10px;
+    }
+
+    .divider{
+        margin: 0 auto;
+    }
+    .divider .line{
+        width: 160.65px;
+    }
+}
+   
+
